NXP-24952: Fix tests when running on java 11